@@ -1,3 +1,7 @@
+Sun Feb 11 21:53:47 2001  George Lebl <jirka@5z.com>
+
+	* drawer.c: fix a bug where a corrupted config could crash the panel
+
 2001-02-11  Julian Missig  <julian@jabber.org>
 
 	* status.c: (load_status_applet): I had set the wrong object for the
